登录功能，检测登录。

--- a/weod/WebContent/WEB-INF/web.xml
+++ b/weod/WebContent/WEB-INF/web.xml
@@ -28,4 +28,12 @@
     <servlet-name>springmvc-web</servlet-name>
     <url-pattern>*.action</url-pattern>
   </servlet-mapping>
+  <servlet>
+      <servlet-name>LoginServlet</servlet-name>
+      <servlet-class>lservlet.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>LoginServlet</servlet-name>
+      <url-pattern>/lservlet/LoginServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
